Provide Ractor support for **

Fixes [Bug #20916]